clang/test/SemaObjC/id-1.m
// RUN: clang -fsyntax-only -verify %s
/* Test attempt to redefine 'id' in an incompatible fashion.  */

typedef int id;   // expected-error {{typedef redefinition with different types}}

id b;
